# ordist

./: Cargo.toml  README.md
ordist/: Cargo.toml  README.md
ordist/examples/: cayley.rs  kendall.rs  test.rs
ordist/src/: corrcoef.rs  distances.rs  error.rs  lcs.rs  lib.rs  ordmap.rs  permutation.rs  random.rs  traits.rs  utils.rs
ordist/tests/: corrcoef.rs  distances.rs  ordmap.rs
ordistpy/: Cargo.toml  MANIFEST.in  setup.py
ordistpy/ordist/: __init__.py  ordist.pyd
ordistpy/src/: lib.rs
