[package]
name    = "ordist"
version = "0.2.0"
authors = ["doraneko94 <shuntaro94@gmail.com>"]
edition = "2018"

description   = "Order distance package"
documentation = "https://docs.rs/ordist/"
repository    = "https://github.com/doraneko94/ordist"
keywords      = ["order", "distance", "correlation"]
license       = "Apache-2.0"
readme        = "README.md"
categories    = ["algorithms", "science"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[dependencies]
ndarray = "0.13.1"
rand = "0.7.3"
num-traits = "0.2.14"