[package]
name = "ordistpy"
version = "0.1.0"
authors = ["doraneko94 <shuntaro94@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ordist"
crate-type = ["cdylib"]

[dependencies]
ndarray = "0.13.1"
ordist = { path = "../ordist" }

[dependencies.pyo3]
version = "0.12.3"
features = ["extension-module"]
